[이동혁]spring 구조화?

--- a/python/kakaologin.ipynb
+++ b/python/kakaologin.ipynb
@@ -92,15 +92,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [27/May/2022 13:18:34] \"POST /kakao-login HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [27/May/2022 20:39:55] \"POST /kakao-login HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "code:YVSHTSxQRJPKJM8ksMVa4scEi-SITJJDsAbOUvGfN3kWUCcsKGuDBzfA27XW8b4EeBPgsQo9cusAAAGBA7zO-g\n",
-      "{'access_token': 'U-a9me4bAfgn8IPfNLW6_cvTAyW6iG9YX780bEkRCj11mgAAAYEDvM9G', 'token_type': 'bearer', 'refresh_token': 'fFB5sOPaW0ZCnDuEDDjjuiCkbiqoDgjbeXf0QlHmCj11mgAAAYEDvM9E', 'expires_in': 21599, 'scope': 'account_email profile_nickname', 'refresh_token_expires_in': 5183999}\n",
+      "{'access_token': '7NH8WsWVEqgIc2Va6DaUhVlg2fTreZuIxapOZbumCj1zTgAAAYEFUOGo', 'token_type': 'bearer', 'refresh_token': 'hUTlNSn8ecYNpb1tXtFKUaAPEEPM9iRCT1dAkw1ECj1zTgAAAYEFUOGm', 'expires_in': 21599, 'scope': 'account_email profile_nickname', 'refresh_token_expires_in': 5183999}\n",
       "200\n",
       "카톡 메시지가 간드아!!!\n"
      ]
@@ -119,16 +118,18 @@
     "def login():\n",
     "    #Spring에서 code 값 받아오기\n",
     "    params = json.loads(request.get_data())\n",
+    "    #코드값 code에 저장\n",
     "    code = params['code']\n",
-    "    print('code:' + code)\n",
     "    KAKAO_LOGIN_TOKEN_SAVED_FILE = \"kakao_login/kakao_login_token.json\"\n",
-    "    #인가코드 획득\n",
+    "    #토큰 요청 후 받아오기\n",
     "    authorize_tokens = kakao_login(code)\n",
+    "    #토큰 저장\n",
     "    save_tokens(KAKAO_LOGIN_TOKEN_SAVED_FILE, authorize_tokens)\n",
+    "    #토큰 불러오기\n",
     "    tokens = load_tokens(KAKAO_LOGIN_TOKEN_SAVED_FILE)\n",
-    "    #프로필 요청\n",
+    "   \n",
     "    \n",
-    "    \n",
+    "    #프로필 요청 및 프로필 정보 spring으로 전달\n",
     "    return getProfile(tokens)\n",
     "\n",
     "\n",
