[이동혁,김태현] 네이버 소셜 로그인 구현중

--- a/python/kakaologin.ipynb
+++ b/python/kakaologin.ipynb
@@ -91,16 +91,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [27/May/2022 13:18:34] \"POST /kakao-login HTTP/1.1\" 200 -\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "code:YVSHTSxQRJPKJM8ksMVa4scEi-SITJJDsAbOUvGfN3kWUCcsKGuDBzfA27XW8b4EeBPgsQo9cusAAAGBA7zO-g\n",
-      "{'access_token': 'U-a9me4bAfgn8IPfNLW6_cvTAyW6iG9YX780bEkRCj11mgAAAYEDvM9G', 'token_type': 'bearer', 'refresh_token': 'fFB5sOPaW0ZCnDuEDDjjuiCkbiqoDgjbeXf0QlHmCj11mgAAAYEDvM9E', 'expires_in': 21599, 'scope': 'account_email profile_nickname', 'refresh_token_expires_in': 5183999}\n",
+      "code:f7te2Yxj0zm23xThJA_z2cll5bjt57qviPeq-q0Ae1aDjEZ3nf3SdsmZgr-xFal43QopBgo9dRkAAAGBFMR27g\n",
+      "{'access_token': 'QEQK7n5Ztycodi3P73D1lEgoORZZo0_einOUbw_KCj11mgAAAYEUxHh5', 'token_type': 'bearer', 'refresh_token': 'gRTi9UHYrCHWL114FXXqWmhpoPDW7ZX4prBUPS-XCj11mgAAAYEUxHh2', 'expires_in': 21599, 'scope': 'account_email profile_nickname', 'refresh_token_expires_in': 5183999}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [30/May/2022 20:40:31] \"POST /kakao-login HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "200\n",
       "카톡 메시지가 간드아!!!\n"
      ]
